--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.17.3",
+    "express": "^4.21.1",
     "isbot": "^5.1.17",
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.0.1",
+    "@types/express": "^5.0.0",
     "@types/node": "^20",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
